--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -27,7 +27,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Undergraduate Teaching Assistant</h3>
-                            <div class="time">January 2015 - May 2016 <strong>[1 year and 4 mons]</strong></div>
+                            <div class="time">January 2015 - Present</div>
                         </div><!--//upper-row-->
                         <div class="company">The American University in Cairo</div>
                     </div><!--//meta-->
