--- a/_includes/extra-curricular-activities.html
+++ b/_includes/extra-curricular-activities.html
@@ -48,7 +48,7 @@
                         <p><ul>
                         <li>Wrote and published 3 articles 
                         <ol>
-                        <li>"Origins of Modern Eating Habits</li>
+                        <li>Origins of Modern Eating Habits</li>
                         <li>Hip Hop Artists: Over Sexualized Videos</li>
                         <li>The Philosophy of Science</li>
                         </ol></li>
