--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,9 +1,9 @@
 <div class="interests-container container-block">
 <h2 class="container-block-title">Interests</h2>
 <ul class="list-unstyled interests-list">
-<li>Gaming of any sort</li>
+<li>Gaming</li>
 <li>Travelling</li>
 <li>Music</li>
-<li>Reading</li>
+<li>Philosophy</li>
 </ul>
 </div><!--//interests-->
