--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -18,6 +18,14 @@
                     </div><!--//item-->
                     
                     <div class="item">
+                        <h3 class="level-title">OpenCV3/Keras/Tensorflow</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="95%">
+                            </div>                                      
+                        </div><!--//level-bar-->                                 
+                    </div><!--//item-->
+                    
+                    <div class="item">
                         <h3 class="level-title">HTML5, CSS &amp; Javascript</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="95%">
@@ -26,7 +34,7 @@
                     </div><!--//item-->
                     
                     <div class="item">
-                        <h3 class="level-title">NodeJS, React, &amp; Bootstrap</h3>
+                        <h3 class="level-title">NodeJS &amp; Bootstrap</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="95%">
                             </div>                                      
@@ -44,7 +52,7 @@
                     <div class="item">
                         <h3 class="level-title">MySQL &amp; SQLite</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="85%">
+                            <div class="level-bar-inner" data-level="95%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
@@ -68,7 +76,7 @@
                     <div class="item">
                         <h3 class="level-title">Research &amp; Writing</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="90%">
+                            <div class="level-bar-inner" data-level="95%">
                             </div>
                         </div> <!-- //level-bar -->
                     </div><!-- //item -->
