--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,8 +17,8 @@
 
   <!-- Favicon and other icons (made with http://www.favicon-generator.org/) -->  
    <!-- type="image/x-icon" -->
-  <link rel="shortcut icon" href="{{ "/assets/icons/favicon.ico" | prepend: site.baseurl }}">
-  <link rel="icon" href="{{ "/assets/icons/favicon.ico" | prepend: site.baseurl }}">
+  <link rel="SHORTCUT icon" href="{{ "/assets/icons/favicon.ico?v=2" | prepend: site.baseurl }}">
+  <link rel="icon" href="{{ "/assets/icons/favicon.ico?v=2" | prepend: site.baseurl }}">
   <link rel="apple-touch-icon" sizes="57x57" href="{{ "/assets/icons/apple-icon-57x57.png" | prepend: site.baseurl }}">
   <link rel="apple-touch-icon" sizes="60x60" href="{{ "/assets/icons/apple-icon-60x60.png" | prepend: site.baseurl }}">
   <link rel="apple-touch-icon" sizes="72x72" href="{{ "/assets/icons/apple-icon-72x72.png" | prepend: site.baseurl }}">
